<resources>
    <string name="app_name">Wetravel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rdo_home_label">home</string>
    <string name="rdo_func_label">func</string>
    <string name="rdo_socc_label">soc</string>
    <string name="rdo_setting_label">setting</string>

    <string name="AboutFragment_label_nickname">we travel</string>
    <string name="AboutFragment_label_grade">评分</string>
    <string name="AboutFragment_label_contact_me">联系我</string>
    <string name="AboutFragment_label_help">帮助</string>
    <string name="AboutFragment_label_setting">设置</string>
    <string name="AboutFragment_label_check_update">检查更新</string>
    <string name="AboutFragment_label_register">登录</string>
</resources>
